--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@
       <section id="main_content">
         <p>COMPLETE STATUS:</p>
 
-<pre><code>Pure Java 1.2+  ::  optimised
-Python 3        ::  optimised
-C ISO C90       ::  optimised
-Java/C JNI      ::  under development
-NASM            ::  planned (maybe, after jni)
-Haskell         ::  planned (maybe)
-Python 2        ::  planned (maybe)
-Perl            ::  planned (maybe)
+<pre><code>Pure Java 1.2+ :: optimised
+Python 3       :: optimised
+Python 2       :: optimised for Python 3
+C ISO C90      :: optimised
+Java/C JNI     :: under development
+Vala           :: correct, under development
+NASM           :: planned (maybe, after jni)
+Haskell        :: planned (maybe)
+Perl           :: planned (maybe)
+D              :: planned (maybe)
+Common Lisp    :: planned (perhaps)
+Scala          :: planned (perhaps)
+Magic          :: planned (perhaps)
 </code></pre>
 
 <p><strong>SHA-3/Keccak checksum calculator</strong></p>
@@ -51,10 +56,10 @@ sha3sum [option...] file...
 <p><em>OPTIONS:</em></p>
 
 <pre><code>-r BITRATE
---bitrate      The bitrate to use for SHA-3.          (default: 576)
+--bitrate      The bitrate to use for SHA-3.          (default: 1024)
 
 -c CAPACITY
---capacity     The capacity to use for SHA-3.         (default: 1024)
+--capacity     The capacity to use for SHA-3.         (default: 576)
 
 -w WORDSIZE
 --wordsize     The word size to use for SHA-3.        (default: 64)
@@ -68,9 +73,28 @@ sha3sum [option...] file...
 -i ITERATIONS
 --iterations   The number of hash iterations to run.  (default: 1)
 
+-j SQUEEZES
+--squeezes      The number of hash squeezes to run.   (default: 1)
+
+-h
+--hex          Read the input in hexadecimal, rather than binary.
+
 -b
---binary    Print the checksum in binary, rather than hexadecimal.
+--binary       Print the checksum in binary, rather than hexadecimal.
+
+-m
+--multi         Print the chechsum at all iterations.
 </code></pre>
+
+<p>Pending the standardisation of SHA-3, there is no specification of particular SHA-3 functions yet.
+Our defaults are based on Keccak[] being Keccak[r = 1024, c = 576] rather than the functions in
+Wikipedias entires that uses [r = 576, c = 1024].</p>
+
+<p>If you want to contribute with an implementation in another
+language, please try do some in the earliest version of the
+language officially supported on GNU/Linux, unless there are
+backwards incompatibilities (as is the case with Python.)
+This helps for embedded devices.</p>
       </section>
     </div>
 
